<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitiesforfamily.SettingsActivity"
    android:background="@color/colorPrimary"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:paddingTop="15dp"
    android:paddingBottom="20dp">

    <ImageView
        android:id="@+id/settings_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_round_arrow_left_48"
        app:tint="@color/colorTextDark" />

    <TextView
        android:id="@+id/settings_header"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/rubik_medium"
        android:gravity="center"
        android:text="@string/settings"
        android:textColor="@color/colorTextDark"
        android:textSize="31sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/settings_takePhoto"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_below="@+id/settings_header"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/colorGrey"
        android:fontFamily="@font/rubik_medium"
        android:includeFontPadding="false"
        android:padding="8dp"
        android:text="@string/retake_picture"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/colorTextLight"
        android:textSize="28sp"
        app:cornerRadius="12dp"
        app:icon="@drawable/ic_round_camera_48"
        app:iconGravity="start"
        app:iconTint="@color/colorTextLight" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/settings_editName"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_below="@+id/settings_takePhoto"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/colorGrey"
        android:fontFamily="@font/rubik_medium"
        android:includeFontPadding="false"
        android:padding="8dp"
        android:text="@string/edit_nickname"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/colorTextLight"
        android:textSize="28sp"
        app:cornerRadius="12dp"
        app:icon="@drawable/ic_round_edit_48"
        app:iconGravity="start"
        app:iconTint="@color/colorTextLight" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/settings_notificationSwitch"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_below="@id/settings_editName"
        android:layout_marginTop="15dp"
        android:background="@drawable/radio_button_unselected"
        android:drawableStart="@drawable/ic_round_notification_48"
        android:drawablePadding="@dimen/_6sdp"
        android:fontFamily="@font/rubik_medium"
        android:includeFontPadding="false"
        android:padding="8dp"
        android:text="@string/notifications"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/colorTextLight"
        android:textOff="@string/off"
        android:textOn="@string/on"
        android:textSize="28sp"
        android:thumb="@drawable/switch_thumb"
        app:showText="true"
        app:track="@drawable/switch_track" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/settings_logout"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/colorAccent"
        android:fontFamily="@font/rubik_medium"
        android:includeFontPadding="false"
        android:padding="8dp"
        android:text="@string/logout"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/colorTextLight"
        android:textSize="28sp"
        app:cornerRadius="12dp"
        app:icon="@drawable/ic_round_exit_48"
        app:iconGravity="start"
        app:iconTint="@color/colorTextLight" />

    <LinearLayout
        android:id="@+id/settings_offlineWarning"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/white"
        android:elevation="10dp"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/warning_title"
            android:fontFamily="@font/rubik_medium"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            android:textAllCaps="false"
            android:gravity="center"
            android:drawablePadding="5dp"
            app:drawableStartCompat="@drawable/ic_round_warning_48"
            app:drawableTint="@color/colorAccent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/warning_details"
            android:fontFamily="@font/rubik_medium"
            android:textSize="15sp"
            android:textColor="@color/colorTextDark"
            android:textAllCaps="false"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/or"
            android:fontFamily="@font/rubik_medium"
            android:textSize="20sp"
            android:textColor="@color/colorTextDark"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/settings_exitApp"
            android:layout_width="wrap_content"
            android:layout_height="85dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/colorAccent"
            android:fontFamily="@font/rubik_medium"
            android:includeFontPadding="false"
            android:padding="8dp"
            android:text="@string/exit_app"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/colorTextLight"
            android:textSize="25sp"
            app:cornerRadius="12dp"
            app:icon="@drawable/ic_round_exit_48"
            app:iconGravity="start"
            app:iconTint="@color/colorTextLight" />

    </LinearLayout>

</RelativeLayout>