<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitiesmutual.CallIncomingActivity"
    android:background="@color/colorPrimary"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:paddingTop="15dp"
    android:paddingBottom="20dp">

    <ImageView
        android:id="@+id/incomingCall_imageMeetingType"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/colorTextDark" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/rubik_medium"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/incoming_call"
        android:textColor="@color/colorTextDark"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/incomingCall_imageMeetingType" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/incomingCall_profileImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:shapeAppearanceOverlay="@style/RoundedSquare" />

        <TextView
            android:id="@+id/incomingCall_userName_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/rubik_medium"
            android:gravity="center"
            android:includeFontPadding="false"
            android:textColor="@color/colorTextDark"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/incomingCall_phoneNum_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/rubik_medium"
            android:gravity="center"
            android:includeFontPadding="false"
            android:textColor="@color/colorTextDark"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/incomingCall_reject_button"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/shape_reject_call_button"
        android:gravity="center"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/reject_call"
            android:textAllCaps="false"
            android:textColor="@color/colorTextLight"
            android:textSize="30sp"
            android:fontFamily="@font/rubik_medium"
            app:drawableStartCompat="@drawable/ic_round_call_end_48"
            app:drawableTint="@color/colorTextLight"
            android:drawablePadding="12dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/incomingCall_answer_layout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintBottom_toTopOf="@id/incomingCall_reject_button"
        android:layout_marginBottom="15dp"
        android:background="@drawable/shape_answer_call_button"
        android:gravity="center"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/answer_call"
            android:textAllCaps="false"
            android:textColor="@color/colorTextLight"
            android:textSize="30sp"
            android:fontFamily="@font/rubik_medium"
            app:drawableStartCompat="@drawable/ic_round_call_48"
            app:drawableTint="@color/colorTextLight"
            android:drawablePadding="5dp"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>